# Island-of-Ireland-Livability-Map-Alpha

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  alembic.ini  config.py  environment.yml  fine_vector_pmtiles_worker.py  main.py  mapbox_vector_tile.py  osm2pgsql_livability.lua  pmtiles_bake_worker.py  progress_tracker.py  pytest.ini  render_from_db.py  repo_map.md  requirements.txt  schema.sql  serve_from_db.py  study_area.py  transit_refresh_runner.py  walkgraph_support.py
db_postgis/: __init__.py  _dependencies.py  amenity_merge.py  common.py  engine.py  manifests.py  reads.py  schema.py  tables.py  write_common.py  write_noise.py  write_transit.py  writes.py
docs/: PHASES.md
fixtures/: livability_sanity.v1.json
frontend/: package-lock.json  package.json  vite.config.js
local_osm_import/: __init__.py  orchestrator.py  osm2pgsql.py  rules.py
network/: __init__.py  loader.py
noise/: __init__.py  cache.py  candidates.py  cli.py  extract.py  loader.py  materialize.py  normalize.py  signature.py  source_discovery.py
noise_artifacts/: __init__.py  __main__.py  bake.py  builder.py  (+11 more)
walkgraph/: Cargo.toml
walkgraph/src/: graph.rs  haversine.rs  lib.rs  main.rs  pbf.rs  reachability.rs  serialize.rs
walkgraph/src/graph/: tests.rs
walkgraph/src/gtfs/: mod.rs
walkgraph/src/haversine/: tests.rs
walkgraph/src/pbf/: tests.rs
walkgraph/src/reachability/: tests.rs
walkgraph/src/serialize/: tests.rs
walkgraph/src/surface/: itm.rs  kdtree.rs  mod.rs  npz.rs  shard.rs
walkgraph/tests/: cli.rs  gtfs_cli.rs  integration.rs
(+120 files in other folders)
