[package]
name = "walkgraph"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
geo = { version = "0.28", features = ["spade"] }
geojson = "0.24"
kiddo = "4"
num_cpus = "1"
osmpbf = "0.3"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "macros"] }
zip = "2"

[dev-dependencies]
tempfile = "3"
